# Generi

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  tasks.py
docker/: matrix.yaml
docker/templates/: Dockerfile
docs/: Dockerfile  conf.py  deploy.yaml  index.md
docs/usage/: optimisation.md  usage.md
examples/: schema.yaml
examples/templates/: Dockerfile  README.md
generi/: artifact.py  cli.py  config.py  context.py  generi.py  optim.py
generi/commands/: __init__.py  build.py  push.py  write.py
generi/config/: __init__.py  config.py  registry.py
generi/console/: __init__.py  cursor.py  status.py
tests/: test_generi.py
